--- a/TensorFlow In Practice/Course 3 - NLP/Course 3 - Week 1 - Lesson 2.ipynb
+++ b/TensorFlow In Practice/Course 3 - NLP/Course 3 - Week 1 - Lesson 2.ipynb
@@ -28,7 +28,7 @@
         "# See the License for the specific language governing permissions and\n",
         "# limitations under the License."
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "cellView": "form",
         "id": "BZSlp3DAjdYf"
@@ -73,12 +73,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "ArOPfBwyZtln"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ArOPfBwyZtln",
+        "outputId": "bc9b786d-ab4c-4ae0-d500-1bc0f52c5fcb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'<oov>': 1, 'my': 2, 'i': 3, 'love': 4, 'dog': 5, 'cat': 6, 'do': 7, 'you': 8, 'think': 9, 'is': 10, 'amazing': 11}\n",
+            "[[3, 4, 2, 5], [3, 4, 2, 6], [7, 8, 9, 2, 5, 10, 11]]\n",
+            "[[3 4 2 5 0]\n",
+            " [3 4 2 6 0]\n",
+            " [7 8 9 2 5]]\n",
+            "[[3, 1, 4, 2, 5], [2, 5, 1, 2, 1]]\n"
+          ]
+        }
+      ],
       "source": [
+        "from collections.abc import Sequence\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "\n",
@@ -86,38 +104,31 @@
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
         "\n",
-        "sentences = [\n",
-        "    'I love my dog',\n",
-        "    'I love my cat',\n",
-        "    'You love my dog!',\n",
-        "    'Do you think my dog is amazing?'\n",
+        "sentences=[\n",
+        "  'I love my dog',\n",
+        "  'I love my cat',\n",
+        "  'Do you think my dog is amazing?'\n",
         "]\n",
         "\n",
-        "tokenizer = Tokenizer(num_words = 100, oov_token=\"<OOV>\")\n",
+        "tokenizer=Tokenizer(num_words=100,oov_token=\"<oov>\")\n",
         "tokenizer.fit_on_texts(sentences)\n",
-        "word_index = tokenizer.word_index\n",
+        "word_index=tokenizer.word_index\n",
         "\n",
-        "sequences = tokenizer.texts_to_sequences(sentences)\n",
+        "sequences=tokenizer.texts_to_sequences(sentences)\n",
         "\n",
-        "padded = pad_sequences(sequences, maxlen=5)\n",
-        "print(\"\\nWord Index = \" , word_index)\n",
-        "print(\"\\nSequences = \" , sequences)\n",
-        "print(\"\\nPadded Sequences:\")\n",
+        "padded=pad_sequences(sequences,padding='post',maxlen=5,truncating='post')#pad_sequences填充序列，处理长度不同的句子\n",
+        "\n",
+        "print(word_index)\n",
+        "print(sequences)\n",
         "print(padded)\n",
         "\n",
         "\n",
-        "# Try with words that the tokenizer wasn't fit to\n",
-        "test_data = [\n",
-        "    'i really love my dog',\n",
-        "    'my dog loves my manatee'\n",
+        "test_data=[\n",
+        "    'i relly love my dog',\n",
+        "    'my dog loves my mantee'\n",
         "]\n",
-        "\n",
-        "test_seq = tokenizer.texts_to_sequences(test_data)\n",
-        "print(\"\\nTest Sequence = \", test_seq)\n",
-        "\n",
-        "padded = pad_sequences(test_seq, maxlen=10)\n",
-        "print(\"\\nPadded Test Sequence: \")\n",
-        "print(padded)"
+        "test_seq=tokenizer.texts_to_sequences(test_data)\n",
+        "print(test_seq)"
       ]
     }
   ],
@@ -125,7 +136,6 @@
     "colab": {
       "name": "Course 3 - Week 1 - Lesson 2.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
